--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,7 +1,8 @@
 body {
    margin: 0px;
    font-family: 'Baloo Bhai', cursive;
-   color: #8a8a8a;
+   color:  #8a8a8a;
+   background-color: black;
 }
 
 .container {
