--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -1,20 +1,46 @@
 @mixin base-btn {
-    cursor: pointer;
-    height: 42px;
-    font-size: 1em;
-    font-weight: 500;
-    border: 1px solid transparent;
-    transition: all 0.5s ease-in-out;
-    background-color:  #8a8a8a;
-    color: black;
-    font-family: 'Baloo Bhai', cursive;
-  
-    &:active,
+  cursor: pointer;
+  height: 42px;
+  font-size: 1em;
+  font-weight: 500;
+  border: 1px solid transparent;
+  transition: all 0.5s ease-in-out;
+  background-color: #8a8a8a;
+  color: black;
+
+  &:active,
+  &:focus {
+    outline: none;
+  }
+
+  &:hover {
+    background-color: darkred;
+  }
+}
+
+@mixin input-element {
+  input {
+    font-family: "Titillium Web", sans-serif;
+    color: darkred;
+    padding: 5px 0px;
+    width: 100%;
+    border-top: 0px;
+    border-right: 0px;
+    border-left: 0px;
+    border-bottom: 1px solid #8a8a8a;
+    background-color: transparent;
+    transition: 0.5s all ease-in-out;
+    font-size: 1.1em;
+    margin-bottom: 21px;
+
     &:focus {
       outline: none;
+      border-bottom: 1px solid darkred;
     }
-  
-    &:hover {
-      background-color: darkred;
-    }
+  }
+}
+
+@mixin base-grid() {
+  display: grid;
+  grid-gap: 21px;
 }
