--- a/src/style/navigation.scss
+++ b/src/style/navigation.scss
@@ -4,6 +4,19 @@
     padding: 30px;
     background-color: black;
 
+    .right-side{
+        a {
+           margin-left: 15px;
+           cursor: pointer;
+           color: #f6f6f6;
+           transition: 0.5s ease-in-out; 
+
+           &:hover {
+               color:darkred;
+           }
+        }
+    }
+
     .left-side {
         display: flex;
     }
