--- a/src/style/blog.scss
+++ b/src/style/blog.scss
@@ -4,6 +4,17 @@
   align-items: center;
   position: relative;
 
+  .admin-blog-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    a {
+      margin-left: 15px;
+      cursor: pointer;
+    }
+  }
+
   .new-blog-link {
     position: fixed;
     right: 0;
@@ -12,13 +23,13 @@
     a {
       font-size: 3em;
       cursor: pointer;
-      color: $teal;
+      color: #8a8a8a;
       margin-right: 15px;
       margin-bottom: 15px;
       transition: 0.5s ease-in-out;
 
       &:hover {
-        color: $dark-teal;
+        color: darkred;
       }
     }
   }
@@ -30,11 +41,11 @@
 
     a {
       text-decoration: none;
-      color: $teal;
+      color: #8a8a8a;
       transition: 0.5s ease-in-out;
 
       &:hover {
-        color: $dark-teal;
+        color: darkred;
       }
     }
 
